Random Forest/DNA/MICROSET_PRUEBA/ERROR_OUTPUT/pyrandom_forgraph_output.477981.out
  File "RandomForest_addhist_logimp.py", line 274
    plt.savefig(histmlabelspng,, format='png', dpi=300, bbox_inches='tight')   #------------------------- // NUEVO \\ --------------------------#
                               ^
SyntaxError: invalid syntax
